task alignment fixes

--- a/src/components/Tasks.css
+++ b/src/components/Tasks.css
@@ -138,7 +138,6 @@
 .data-table {
   width: 100%;
   border-collapse: collapse;
-  table-layout: fixed;
 }
 
 .data-table th,
@@ -147,7 +146,6 @@
   text-align: left;
   border-bottom: 1px solid #eee;
   font-size: 14px;
-  vertical-align: middle;
 }
 
 .data-table th {
